@@ -1,6 +1,6 @@
 lib_LTLIBRARIES += gtk/libzebragtk.la
 gtk_libzebragtk_la_CPPFLAGS = -Igtk $(GTK_CFLAGS) $(AM_CPPFLAGS)
-gtk_libzebragtk_la_LDFLAGS = -version-info $(LIB_VERSION) $(AM_LDFLAGS)
+gtk_libzebragtk_la_LDFLAGS = -version-info $(ZGTK_LIB_VERSION) $(AM_LDFLAGS)
 gtk_libzebragtk_la_LIBADD = $(GTK_LIBS) zebra/libzebra.la $(AM_LIBADD)
 
 gtk_libzebragtk_la_SOURCES = gtk/zebragtk.c gtk/zebragtkprivate.h \
